[package]
name = "rocket-chat"
version = "0.1.0"
edition = "2021"
authors = [ "Eshan Chatterjee <eshan20012@gmail.com>", "Kelsey" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }

[dev-dependencies]
rand = "0.8"